{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 9,
  "lineage": "96ed6329-6cf2-8143-0f90-350fd6d72957",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a787ac2e0c399e8b",
            "arn": "arn:aws:ec2:us-east-2:809349731652:instance/i-0197a8ddb90e7a404",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0197a8ddb90e7a404",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web_Tf",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0939667f8d01664df",
            "private_dns": "ip-172-31-255-47.us-east-2.compute.internal",
            "private_ip": "172.31.255.47",
            "public_dns": "ec2-18-219-32-0.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.32.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0af60fbf7a83d351a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dae01a6e48b600e8",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03093c738462312bb"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-web",
            "aws_subnet.web",
            "aws_vpc.vpc-gmkgo",
            "data.aws_ami.aws-linux",
            "data.aws_availability_zones.available",
            "data.template_file.cloud-init-ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:809349731652:internet-gateway/igw-01ef4ceba44ac10be",
            "id": "igw-01ef4ceba44ac10be",
            "owner_id": "809349731652",
            "vpc_id": "vpc-0b409098f0ab3583f"
          },
          "dependencies": [
            "aws_vpc.vpc-gmkgo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:809349731652:route-table/rtb-03a6d7b51d659cef9",
            "id": "rtb-03a6d7b51d659cef9",
            "owner_id": "809349731652",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01ef4ceba44ac10be",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b409098f0ab3583f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc-gmkgo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:809349731652:security-group/sg-03093c738462312bb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03093c738462312bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_web",
            "name_prefix": "",
            "owner_id": "809349731652",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b409098f0ab3583f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-gmkgo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:809349731652:subnet/subnet-0dae01a6e48b600e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.255.0/26",
            "id": "subnet-0dae01a6e48b600e8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "809349731652",
            "vpc_id": "vpc-0b409098f0ab3583f"
          },
          "dependencies": [
            "aws_vpc.vpc-gmkgo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-gmkgo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:809349731652:vpc/vpc-0b409098f0ab3583f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.254.0/23",
            "default_network_acl_id": "acl-05ddbc5e62dc835d9",
            "default_route_table_id": "rtb-0b3e004c84230f72b",
            "default_security_group_id": "sg-0fc92fbe1af67fb39",
            "dhcp_options_id": "dopt-64b2cd0f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b409098f0ab3583f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b3e004c84230f72b",
            "owner_id": "809349731652"
          }
        }
      ]
    }
  ]
}